BudgetView: Fix instructor cost layout bug from inconsistent padding

--- a/app/budget/directives/instructorCosts/instructorCosts.css
+++ b/app/budget/directives/instructorCosts/instructorCosts.css
@@ -23,8 +23,8 @@
 
 .instructor-costs__table-cell {
 	background-color: #f8f8f8;
-	padding-top: 10px;
-	padding-bottom: 10px;
+	padding-top: 5px;
+	padding-bottom: 5px;
 }
 
 .instructor-costs__table-cell-total {
